--- a/doc/Laporan/section/2-desain.tex
+++ b/doc/Laporan/section/2-desain.tex
@@ -1,10 +1,13 @@
 \section{Desain}\label{sec:Desain} % (fold)
 \subsection{Tech Stack}\label{sub:Tech Stack} % (fold)
-Aplikasi ini dirancang menggunakan bahasa Java untuk memungkinkan program dapat berjalan di berbagai platform, serta mempermudah perancangan GUI (spesifikasi bonus). Secara garis besar, arsitektur aplikasi terdiri dari komponen-komponen berikut.
+Aplikasi ini dirancang menggunakan bahasa Java untuk memungkinkan
+program dapat berjalan di berbagai platform, serta mempermudah
+perancangan GUI (spesifikasi bonus). Secara garis besar, arsitektur
+aplikasi terdiri dari komponen-komponen berikut.
 \begin{enumerate}
     \item Bahasa Pemrograman: Java 17
     \item Framework GUI: JavaFX
-    \item Menejemen Dependensi: Apache Maven 
+    \item Menejemen Dependensi: Apache Maven
 \end{enumerate}
 % subsection Tech Stack (end)
 
@@ -14,23 +17,31 @@ Proyek disusun mengikuti standar Maven dan spesifikasi tugas:
     \item \texttt{src/main/}
         \begin{enumerate}
             \item \texttt{src/main/java/queens/}: Kode sumber Java.
-            \item \texttt{src/main/input/}: \textit{Test case} yang digunakan untuk melakukan \textit{testing}.
+            \item \texttt{src/main/input/}: \textit{Test case} yang
+                digunakan untuk melakukan \textit{testing}.
         \end{enumerate}
     \item \texttt{bin/}: \textit{File executable} atau hasil kompilasi.
     \item \texttt{doc/}: Spesifikasi dan laporan tugas kecil dalam PDF
-    \item \texttt{pom.xml}: Konfigurasi Maven dan daftar dependensi \textit{library}.
+    \item \texttt{pom.xml}: Konfigurasi Maven dan daftar dependensi
+        \textit{library}.
     \item \texttt{doc/}: Dokumentasi laporan PDF.
-    \item \texttt{pom.xml}: Konfigurasi Maven dan daftar dependensi \textit{library}.
+    \item \texttt{pom.xml}: Konfigurasi Maven dan daftar dependensi
+        \textit{library}.
 \end{enumerate}
 % subsection Struktur Program (end)
-Program utama dibagi menjadi dua komponen utama untuk memisahkan algoritma dengan GUI:
+Program utama dibagi menjadi dua komponen utama untuk memisahkan
+algoritma dengan GUI:
 \begin{itemize}
-    \item \texttt{queens.Solver} berisi algoritma \textit{brute force} untuk mmenempatkan \textit{queens}. Terdapat logika \textit{solver}
-    \item \texttt{queens.Main} berisi komponen UI yang dibangun dengan JavaFX. 
+    \item \texttt{queens.Solver} berisi algoritma \textit{brute
+        force} untuk mmenempatkan \textit{queens}. Terdapat logika
+        \textit{solver}
+    \item \texttt{queens.Main} berisi komponen UI yang dibangun dengan JavaFX.
 \end{itemize}
 
-\subsection{Cara Kompilasi dan Menjalankan Program}\label{sec:Cara Kompilasi dan Menjalankan Program} % (fold)
-Untuk mengompilasi seluruh kode sumber dan mengunduh dependensi JavaFX, jalankan perintah berikut pada direktori \textit{root} projek.
+\subsection{Cara Kompilasi dan Menjalankan Program}\label{sec:Cara
+Kompilasi dan Menjalankan Program} % (fold)
+Untuk mengompilasi seluruh kode sumber dan mengunduh dependensi
+JavaFX, jalankan perintah berikut pada direktori \textit{root} projek.
 \begin{lstlisting}[language=bash, basicstyle=\ttfamily\small, breaklines=true]
     mvn clean compile
 \end{lstlisting}
