--- a/doc/Laporan/section/6-penutup.tex
+++ b/doc/Laporan/section/6-penutup.tex
@@ -1,16 +1,46 @@
 \section{Penutup}
 \subsection{Lampiran}\label{sub:Lampiran} % (fold)
-Tautan kode sumber yang saya rancang dalam program ini ada pada tautan berikut. \\
+Tautan kode sumber yang saya rancang dalam program ini ada pada
+tautan berikut. \\
 \noindent Link Github: \url{https://github.com/raulinns/Tucil1-13524044.git}
+
+Rangkuman hasil program ini tertera pada tabel berikut.
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{|c|p{8cm}|c|c|}
+        \hline
+        \textbf{No} & \centering \textbf{Poin} & \textbf{Ya} &
+        \textbf{Tidak} \\ \hline
+        1 & Program berhasil di kompilasi tanpa kesalahan  &
+        \checkmark & \\ \hline
+        2 & Program berhasil di jalankan  & \checkmark & \\ \hline
+        3 & Solusi yang diberikan program benar dan mematuhi aturan
+        permainan  & \checkmark & \\ \hline
+        4 & Program dapat membaca masukan berkas .txt serta menyimpan
+        solusi dalam berkas .txt & \checkmark & \\ \hline
+        5 & Program memiliki Graphical User Interface (GUI)  &
+        \checkmark & \\ \hline
+        6 & Program dapat menyimpan solusi dalam bentuk file gambar &
+        \checkmark & \\ \hline
+    \end{tabular}
+    \caption{Ringkasan Keterselesaian Program}
+\end{table}
 
 % subsection Lampiran (end)
 \subsection{Kata Penutup}\label{sub:Kata Penutup} % (fold)
-"Tugas Kecil saja sudah seperti ini, bagaimana jika Tugas Besar, ya." Itu yang aku bayangkan saat mengerjakan tugas ini. Namun, Tugas Kecil ini sangat membuka pikiranku tentang algoritma. Selama liburan, aku berpikir bagaimana cara mengurangi penggunaan AI. Melihat mata kuliah Strategi Algoritma ini, tampaknya mata kuliah ini akan menjadi gerbang menuju hal tersebut. Terima kasih, IF2211 Strategi Algoritma!
+"Tugas Kecil saja sudah seperti ini, bagaimana jika Tugas Besar, ya."
+Itu yang aku bayangkan saat mengerjakan tugas ini. Namun, Tugas Kecil
+ini sangat membuka pikiranku tentang algoritma. Selama liburan, aku
+berpikir bagaimana cara mengurangi penggunaan AI. Melihat mata kuliah
+Strategi Algoritma ini, tampaknya mata kuliah ini akan menjadi
+gerbang menuju hal tersebut. Terima kasih, IF2211 Strategi Algoritma!
 
 % subsection Kata Penutup (end)
 
+\pagebreak
 \subsection{Pernyataan}\label{sub:Pernyataan} % (fold)
-Tugas ini disusun sepenuhnya tanpa bantuan kecerdesan buatan (\textit{Generative AI}), melainkan hasil pemikiran dan analisis mandiri.
+Tugas ini disusun sepenuhnya tanpa bantuan kecerdesan buatan
+(\textit{Generative AI}), melainkan hasil pemikiran dan analisis mandiri.
 
 \raggedleft
 Bandung, 18 Februari 2026
